--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -1,12 +1,19 @@
 html { font-family: "Helvetica Neue", "Arial", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif; font-size: 14px; line-height: 1.5; }
+
+
 body { background-color: rgb(245, 245, 245);
      color: rgb(0, 0, 0); 
      margin:0;
      margin-top:-40px;
      padding:0;
     }
+
+
 h1 { font-size: 100%; margin: 0; }
+
+
 img { vertical-align: middle; }
+
 
 header {
     width:100%;
@@ -29,9 +36,14 @@ header {
 ul { padding-left: 0; 
    
 }
-ul li { list-style-type: none; }
-a { color: inherit; text-decoration: none; }
 
+ul li { list-style-type: none; }
+
+a { color: dodgerblue; text-decoration: none; }
+
+a:hover{
+    color: rebeccapurple;
+}
 
 .section-header .nav li {
    border-right:1px solid rgb(218, 218, 218);
@@ -45,6 +57,7 @@ a { color: inherit; text-decoration: none; }
     display:block;
     padding:0 1.36em;
     position:relative;
+    color: black;
 }
 
 .section-header .nav a:hover,
@@ -100,4 +113,37 @@ a { color: inherit; text-decoration: none; }
     left:1200px;
     top:600px;
     display:none;
+}
+
+/*Contact*/
+#contact{
+    height: 500px;
+    margin-left: 30px;
+    text-align: center;
+}
+
+#contact h2{
+    margin-bottom: 30px;
+    font-size: 55px;
+    font-style: italic;
+}
+
+#contact p{
+    margin-bottom: 70px;
+    font-size: 20px;
+}
+
+
+#contact table{
+    font-style: italic;
+    font-size: 15px;
+}
+
+#contact table th{
+    text-align: left;
+    width: 100px;
+}
+
+#contact table td{
+    width: 200px;
 }
